test/Fail/MissingTypeSignature.err
MissingTypeSignature.agda:8,1-20: error: [GenericError]
Missing type signature for left hand side pred zero
when scope checking the declaration
  pred zero = zero
